--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "name": "karthick-vaiyapuri-landing-site",
+  "description": "Landing website of Dr. Karthick Vaiyapuri",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "Santhosh",
   "dependencies": {
+    "@types/jest": "^26.0.13",
+    "@types/node": "^12.12.55",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.0",
+    "bootstrap": "^4.5.2",
     "bulma": "^0.9.0",
-    "gatsby": "^2.20.35",
+    "gatsby": "^2.24.53",
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.2.5",
@@ -22,14 +27,13 @@
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.9.6",
-    "netlify-cms-media-library-cloudinary": "^1.3.2",
-    "netlify-cms-media-library-uploadcare": "^0.5.2",
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "uuid": "^7.0.0"
+    "typescript": "~4.0.2",
+    "uuid": "^8.3.0"
   },
   "keywords": [
     "gatsby"
@@ -44,7 +48,10 @@
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.1"
   }
 }
